// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReceiveFunds should not render if not open 1`] = `<DocumentFragment />`;

exports[`ReceiveFunds should not render qrcode without an address 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-auto"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxhCb pcYUy absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxiKw eyfbzP w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Receive Funds
        </h2>
        <div
          class="flex-1"
        >
          <div
            data-testid="ReceiveFunds__info"
          >
            <div
              class="sc-AxgMl kLjhnr"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral-700"
                >
                  Address
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex items-center space-x-3"
                  >
                    <span />
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-neutral-600"
                    >
                      <div
                        class="inline-block cursor-pointer"
                        data-testid="clipboard__wrapper"
                      >
                        <div
                          class="sc-AxirZ iQaTP"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-AxjAm jcZnVc -mr-2"
              >
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt=""
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"70\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-8"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFunds should render with a wallet name 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-auto"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxhCb pcYUy absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxiKw eyfbzP w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Receive Funds
        </h2>
        <div
          class="flex-1"
        >
          <div
            data-testid="ReceiveFunds__info"
          >
            <div
              class="sc-AxgMl kLjhnr"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral-700"
                >
                  Wallet
                </div>
                <div
                  class="font-semibold"
                >
                  My Wallet
                </div>
              </div>
              <div
                class="sc-AxjAm jcZnVc ml-4"
              >
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="ReceiveFunds__info"
          >
            <div
              class="sc-AxgMl kLjhnr"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral-700"
                >
                  Address
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex items-center space-x-3"
                  >
                    <span>
                      abc
                    </span>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-neutral-600"
                    >
                      <div
                        class="inline-block cursor-pointer"
                        data-testid="clipboard__wrapper"
                      >
                        <div
                          class="sc-AxirZ iQaTP"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="abc"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                    title="abc"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-8"
          >
            <img
              alt="QR Code"
              class="w-64 h-64 mx-auto"
              data-testid="ReceiveFunds__qrcode"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAAD6CAYAAACI7Fo9AAAAAklEQVR4AewaftIAAASdSURBVO3BgW0lBxYDwX6E8k+Z5wBsQHPYwX5RXXVA0R/Tlk9yd3yKtjxxd+jPCJLmBUnzgqR5QdK8IGlekDQvSJoXJM0LkuYFSfOCpHlfPNSW3+Tu+CR3x1va8pO15Te5O74rSJoXJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzQuS5n3xsrvjk7Tlk9wd+jvujk/SlrcESfOCpHlB0rwgaV6QNC9ImhckzQuS5gVJ84KkeUHSvC/0o7TlLXfHm9qivyNImhckzQuS5gVJ84KkeUHSvCBpXpA0L0iaFyTNC5LmfaFpd8d3teWJu0M/Q5A0L0iaFyTNC5LmBUnzgqR5QdK8IGlekDQvSJoXJM374mVt0c9wdzzRlp+sLb9FkDQvSJoXJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzfviobtDm9ryxN3xRFvedHfo3wVJ84KkeUHSvCBpXpA0L0iaFyTNC5LmBUnzgqR5QdK86z/QX3N3vKktUpA0L0iaFyTNC5LmBUnzgqR5QdK8IGlekDQvSJoXJM07oDzQlifujt+kLW+6Oz5FW950d/wmbXlLkDQvSJoXJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzTugfJC2vOnueKItT9wdb2rLW+6On6wtn+TueKItT9wd3xUkzQuS5gVJ84KkeUHSvCBpXpA0L0iaFyTNC5LmBUnzrv/ggbvjibb8ZHfHm9ryxN3xRFvecnc80ZYn7o43teWT3B1PtOW7gqR5QdK8IGlekDQvSJoXJM0LkuYFSfOCpHlB0rzrP/jB7o4n2vJJ7o4n2vLE3fFbtOVNd8cnact3BUnzgqR5QdK8IGlekDQvSJoXJM0LkuYFSfOCpHlB0rwvHro7nmjLJ7k73tSWn6otT9wdT7TlTXfHE215oi0/VZA0L0iaFyTNC5LmBUnzgqR5QdK8IGlekDQvSJoXJM374qG2fJK26L+1RX/H3fFEW564O74rSJoXJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzQuS5h1Q9Me05ZPcHW9pyxN3xxNtedPd8aa2PHF3PNGW7wqS5gVJ84KkeUHSvCBpXpA0L0iaFyTNC5LmBUnzgqR5B5QH2vKb3B1PtOWJu+NNbfkt7o43teWJu+NTBEnzgqR5QdK8IGlekDQvSJoXJM0LkuYFSfOCpHlB0rwvXnZ3fJK26N/dHU+05Ym744m2PNGWJ+6OT9KWtwRJ84KkeUHSvCBpXpA0L0iaFyTNC5LmBUnzgqR5QdK8L6T/093xprvjibY80ZYn7o4n2vIpgqR5QdK8IGlekDQvSJoXJM0LkuYFSfOCpHlB0rwgad4X+lHa8pa2PHF3PNGWJ+6OJ+6OJ9ryRFt+qiBpXpA0L0iaFyTNC5LmBUnzgqR5QdK8IGlekDQvSJr3xcvaov/Wlk9xd7zp7nhTW950dzzRlk8RJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzQuS5gVJ8w4o+mPa8sTd8Sna8sTd8URb3nR3PNGWN90db2rLdwVJ84KkeUHSvCBpXpA0L0iaFyTNC5LmBUnzgqR5/wPdtvfRmjCf7QAAAABJRU5ErkJggg=="
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFunds should render without a wallet name 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-auto"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxhCb pcYUy absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxiKw eyfbzP w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Receive Funds
        </h2>
        <div
          class="flex-1"
        >
          <div
            data-testid="ReceiveFunds__info"
          >
            <div
              class="sc-AxgMl kLjhnr"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral-700"
                >
                  Address
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex items-center space-x-3"
                  >
                    <span>
                      abc
                    </span>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-neutral-600"
                    >
                      <div
                        class="inline-block cursor-pointer"
                        data-testid="clipboard__wrapper"
                      >
                        <div
                          class="sc-AxirZ iQaTP"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-AxjAm jcZnVc -mr-2"
              >
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="abc"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                    title="abc"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-8"
          >
            <img
              alt="QR Code"
              class="w-64 h-64 mx-auto"
              data-testid="ReceiveFunds__qrcode"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAAD6CAYAAACI7Fo9AAAAAklEQVR4AewaftIAAASdSURBVO3BgW0lBxYDwX6E8k+Z5wBsQHPYwX5RXXVA0R/Tlk9yd3yKtjxxd+jPCJLmBUnzgqR5QdK8IGlekDQvSJoXJM0LkuYFSfOCpHlfPNSW3+Tu+CR3x1va8pO15Te5O74rSJoXJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzQuS5n3xsrvjk7Tlk9wd+jvujk/SlrcESfOCpHlB0rwgaV6QNC9ImhckzQuS5gVJ84KkeUHSvC/0o7TlLXfHm9qivyNImhckzQuS5gVJ84KkeUHSvCBpXpA0L0iaFyTNC5LmfaFpd8d3teWJu0M/Q5A0L0iaFyTNC5LmBUnzgqR5QdK8IGlekDQvSJoXJM374mVt0c9wdzzRlp+sLb9FkDQvSJoXJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzfviobtDm9ryxN3xRFvedHfo3wVJ84KkeUHSvCBpXpA0L0iaFyTNC5LmBUnzgqR5QdK86z/QX3N3vKktUpA0L0iaFyTNC5LmBUnzgqR5QdK8IGlekDQvSJoXJM07oDzQlifujt+kLW+6Oz5FW950d/wmbXlLkDQvSJoXJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzTugfJC2vOnueKItT9wdb2rLW+6On6wtn+TueKItT9wd3xUkzQuS5gVJ84KkeUHSvCBpXpA0L0iaFyTNC5LmBUnzrv/ggbvjibb8ZHfHm9ryxN3xRFvecnc80ZYn7o43teWT3B1PtOW7gqR5QdK8IGlekDQvSJoXJM0LkuYFSfOCpHlB0rzrP/jB7o4n2vJJ7o4n2vLE3fFbtOVNd8cnact3BUnzgqR5QdK8IGlekDQvSJoXJM0LkuYFSfOCpHlB0rwvHro7nmjLJ7k73tSWn6otT9wdT7TlTXfHE215oi0/VZA0L0iaFyTNC5LmBUnzgqR5QdK8IGlekDQvSJoXJM374qG2fJK26L+1RX/H3fFEW564O74rSJoXJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzQuS5h1Q9Me05ZPcHW9pyxN3xxNtedPd8aa2PHF3PNGW7wqS5gVJ84KkeUHSvCBpXpA0L0iaFyTNC5LmBUnzgqR5B5QH2vKb3B1PtOWJu+NNbfkt7o43teWJu+NTBEnzgqR5QdK8IGlekDQvSJoXJM0LkuYFSfOCpHlB0rwvXnZ3fJK26N/dHU+05Ym744m2PNGWJ+6OT9KWtwRJ84KkeUHSvCBpXpA0L0iaFyTNC5LmBUnzgqR5QdK8L6T/093xprvjibY80ZYn7o4n2vIpgqR5QdK8IGlekDQvSJoXJM0LkuYFSfOCpHlB0rwgad4X+lHa8pa2PHF3PNGWJ+6OJ+6OJ9ryRFt+qiBpXpA0L0iaFyTNC5LmBUnzgqR5QdK8IGlekDQvSJr3xcvaov/Wlk9xd7zp7nhTW950dzzRlk8RJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzQuS5gVJ8w4o+mPa8sTd8Sna8sTd8URb3nR3PNGWN90db2rLdwVJ84KkeUHSvCBpXpA0L0iaFyTNC5LmBUnzgqR5/wPdtvfRmjCf7QAAAABJRU5ErkJggg=="
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
